[localserver] add settings import and export
